<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_launchr"
    android:paddingBottom="5dp">

    <ImageView
        android:id="@+id/iv_head_icon"
        android:layout_width="@dimen/icon_head_size"
        android:layout_height="@dimen/icon_head_size"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="7.5dp"
        android:layout_marginTop="7.5dp"
        android:background="@null"
        android:src="@drawable/icon_default" />

    <TextView
        android:id="@+id/tv_chat_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iv_head_icon"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="@dimen/chat_name_margin_left"
        android:layout_toRightOf="@+id/iv_head_icon"
        android:text=""
        android:textColor="@color/black"
        android:textSize="10sp" />

    <RelativeLayout
        android:id="@+id/layout_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_chat_name"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@id/iv_head_icon"
        android:background="@drawable/icon_chat_card_approval"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/icon_chat_card_accept" />

        <LinearLayout
            android:id="@+id/lin_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxWidth="200dp"
                android:paddingLeft="@dimen/standard_chat_left"
                android:paddingRight="@dimen/standard_chat_right"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/standard_title_size" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:paddingRight="@dimen/standard_chat_right"
                android:text=""
                android:textColor="@color/chat_card_green"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="@dimen/standard_title_size" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lin_title"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:paddingLeft="@dimen/standard_chat_left"
            android:paddingRight="@dimen/standard_chat_right">

            <ImageView
                android:id="@+id/iv_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/event_calendar" />

            <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_end"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/standard_content_size" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_end"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            android:paddingLeft="@dimen/standard_chat_left"
            android:paddingRight="@dimen/standard_chat_right">

            <ImageView
                android:id="@+id/iv_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/red_clock" />

            <TextView
                android:id="@+id/tv_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_deadline"
                android:text=""
                android:textColor="@color/red_launchr"
                android:textSize="@dimen/standard_content_size" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lin_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin_title"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/standard_chat_left"
            android:paddingRight="@dimen/standard_chat_right">

            <RelativeLayout
                android:id="@+id/rel_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:visibility="gone"
                >

                <ImageView
                    android:id="@+id/iv_remark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/event_money" />

                <TextView
                    android:id="@+id/tv_remark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/iv_remark"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/standard_content_size" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_bottom_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lin_cost"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/standard_chat_left"
            android:paddingRight="@dimen/standard_chat_right">

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_marginRight="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_approval_accept"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/approval_agree"
                    android:textColor="@color/green_launchr"
                    android:textSize="15sp" />
                <Button
                    android:id="@+id/btn_reject"
                    android:layout_marginRight="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_approval_refuse"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/approval_not_agree"
                    android:textColor="@color/task_priority_red"
                    android:textSize="15sp" />
                <Button
                    android:id="@+id/btn_give_back"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_approval_recall"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/event_give_back"
                    android:textColor="@color/task_priority_yellow"
                    android:textSize="15sp" />

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_card"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="14dp"
        android:paddingRight="5dp"
        android:text=""
        android:textColor="@color/text_gray"
        android:textSize="12sp"
        android:visibility="visible" />


    <TextView
        android:id="@+id/tv_read"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignRight="@+id/layout_card"
        android:layout_alignTop="@+id/layout_card"
        android:layout_marginRight="-4dp"
        android:layout_marginTop="-4dp"
        android:background="@drawable/icon_circle_red" />

</RelativeLayout>